--- a/RAPPORT/rapport.tex
+++ b/RAPPORT/rapport.tex
@@ -118,12 +118,12 @@ On reprend donc le fichier SimplePDL.ecore définissant le méta-modèle, et l'o
 
 Pour la gestion des ressources :\\
 
-On rajoute deux nouvelles classes : RessourceDefinition et RessourceInstance.
-La classe RessourceDefinition sert à définir les différentes ressources et leur nombre total disponible dans le système. Par exemple, si l'on dispose de 4 ressources de type Machine,
-on va alors déclarer dans le fichier modèle simplepdl une RessourceDefinition, avec un attribut number égal à 4.\\
+On rajoute deux nouvelles classes : \textit{RessourceDefinition} et \textit{RessourceInstance}.
+La classe \textit{RessourceDefinition} sert à définir les différentes ressources et leur nombre total disponible dans le système. Par exemple, si l'on dispose de 4 ressources de type machine,
+on va alors déclarer dans le fichier définissant le méta-modèle SimplePDL une \textit{RessourceDefinition}, avec un attribut number égal à 4.\\
 
-La classe RessourceInstance permet d'exprimer le fait qu'une activité va devoir utiliser une certaine quantité de ressources pour fonctionner.
-Elle possède un lien vers une RessourceDefinition exprimant le type de la ressource ainsi qu'un lien vers l'activité en question.
+La classe \textit{RessourceInstance} permet d'exprimer le fait qu'une activité va devoir utiliser une certaine quantité de ressources pour fonctionner.
+Elle possède un lien vers une \textit{RessourceDefinition} exprimant le type de la ressource ainsi qu'un lien vers l'activité (\textit{WorkDefinition}) en question.
 Elle doit aussi posséder un attribut entier indiquant le nombre de ressources nécéssaires à l'activité.\\
 
 Si l'on affiche le méta-modèle sous forme textuelle (améliorée), on a donc :\\
@@ -146,13 +146,13 @@ On peut également afficher le méta-modèle sous forme graphique Ecorediag :\\
 \end{center}
 \end{figure} 
 
-On se retrouve dans une situation assez symétrique avec les classes WorkDefinition et WorkSequence. En effet, ces deux classes héritent toutes deux de ProcessElement et une WorkSequence constitue un lien entre deux WorkDefinition.\\
+On se retrouve dans une situation assez symétrique avec les classes \textit{WorkDefinition} et \textit{WorkSequence}. En effet, ces deux classes héritent toutes deux de \textit{ProcessElement} et une \textit{WorkSequence} constitue un lien entre deux \textit{WorkDefinition}.\\
 
-Pour la modélisation des ressources disponibles et de leur utilisation par des activités, les classes RessourceDefinition et RessourceInstance héritent également de ProcessElement et une RessourceInstance représentera le lien entre une RessourceDefinition et une WorkDefinition.
+Pour la modélisation des ressources disponibles et de leur utilisation par des activités, les classes \textit{RessourceDefinition} et \textit{RessourceInstance} héritent également de \textit{ProcessElement} et une \textit{RessourceInstance} représentera le lien entre une \textit{RessourceDefinition} et une \textit{WorkDefinition}.
 
 \subsection{Ajout du temps}
 
-L'ajout du temps est plus aisé (à ce niveau là en tout cas). Il suffit d'ajouter des attributs temps\_min et temps\_max aussi bien au niveau du Processus que de la WorkDefinition. Le fichier Ecore modifié est le suivant :\\
+L'ajout du temps est plus aisé (à ce niveau là en tout cas). Il suffit d'ajouter des attributs \textit{temps\_min} et \textit{temps\_max} aussi bien au niveau du \textit{Process} que de la \textit{WorkDefinition}. Le fichier Ecore modifié est le suivant :\\
 
 \begin{figure}[!h] 
 \begin{center}
@@ -186,16 +186,24 @@ Pour mettre en oeuvre cet outil graphique on utilise le plugin GMF d'Eclipse qui
 \caption{Exemple d'utilisation de l'éditeur graphique engendré} 
 \label{img1} 
 \end{center}
-\end{figure} 
+\end{figure}
+
+On peut observer dans ce modèle édité graphiquement, que l'on représente :
+\begin{itemize}
+\item un élément de type \textit{WorkDefinition} par une ellipse
+\item un élément de type \textit{WorkSequence} par une flèche entre deux éléments de type \textit{WorkDefinition}
+\item un élément de type \textit{RessourceDefinition} par un rectangle
+\item un élément de type \textit{RessourceInstance} par une flèche entre un élément de type \textit{RessourceDfinition} et un de type \textit{WorkDefinition}\\
+\end{itemize}
 
 Les propriétés telles que :
 \begin{itemize}
-\item le nombre de ressources des éléments de type RessourceDefinition
-\item le nombre des éléménets de type RessourceInstance
-\item le type des relations de type WorkSequence 
-\item les intervalles de temps des éléments de type WorkDefinition et Process
+\item le nombre de ressources des éléments de type \textit{RessourceDefinition}
+\item le nombre des éléménets de type \textit{RessourceInstance}
+\item le type des relations de type \textit{WorkSequence}
+\item les intervalles de temps des éléments de type \textit{WorkDefinition} et \textit{Process}
 \end{itemize}
-sont accessibles depuis l'onglet Propriété.
+sont accessibles depuis l'onglet Propriétés.
 
 \begin{figure}[!h] 
 \begin{center}
@@ -221,87 +229,88 @@ Le modèle généré graphiquement peut être également représenté sous forme
 
 Nous devons donner une syntaxe concrète textuelle de SimplePDL pour prendre en compte les ressources et le temps et l’outiller avec xText. On va donc reprendre la grammaire xText élaborée lors des séances précédentes.
 
-On rajoute ces lignes dans le fichier xText :\\
+On rajoute ces lignes dans le fichier xText pour prendre en compte dans la syntaxe les éléments de type \textit{RessourceDefinition} et \textit{RessourceInstance} :\\
 
 \begin{verbatim}
 RessourceDefinition returns RessourceDefinition:
-	'rd'
-		name=EString
-		'number' number=EInt
-	;
+        'rd'
+                name=EString
+                'number' number=EInt
+        ;
 
 RessourceInstance returns RessourceInstance:
-	'ri'
-		'type' type=[RessourceDefinition|EString]
-		'activity' activity=[WorkDefinition|EString]
-		'instances' instances=EInt
-	;
+        'ri'
+                'type' type=[RessourceDefinition|EString]
+                'activity' activity=[WorkDefinition|EString]
+                'instances' instances=EInt
+        ;
 \end{verbatim}
 
-On définit ainsi qu'une RessourceDefinition possède un nom et un chiffre indiquant sa quantité. Une RessourceInstance possède un type, qui n'est autre qu'une WorkDefinition.
-Elle possède aussi une activité de type WorkDefinition et un nombre d'instances entier.\\
+On définit ainsi qu'une RessourceDefinition possède un nom et un chiffre indiquant sa quantité. Un élément de type \textit{RessourceInstance} possède un type, qui n'est autre qu'un élément de type \textit{RessourceDefinition}.
+Il possède aussi une activité qui correspond à un élément de type \textit{WorkDefinition} et un nombre d'instances entier.\\
 
-Il faut aussi modifier la ligne ProcessElement pour indiquer que l'on peut déclarer des éléments de type RessourceDefinition et des RessourceInstance.
+Il faut aussi modifier la ligne \textit{ProcessElement} pour indiquer que l'on peut déclarer des éléments de type \textit{RessourceDefinition} et des \textit{RessourceInstance} à l'intérieur de l'élément racine de type \textit{Process}.
 
 \begin{verbatim}
 ProcessElement returns ProcessElement:
-	WorkDefinition | WorkSequence | Guidance | RessourceDefinition | RessourceInstance
-	;
+        WorkDefinition | WorkSequence | Guidance | RessourceDefinition | RessourceInstance
+        ;
 \end{verbatim}
 
-Enfin, on ajoute au Processus et à la WorkDefinition des attributs min\_time et max\_time.
+Enfin, on ajoute au \textit{Process} et à la \textit{WorkDefinition} des attributs \textit{min\_time} et \textit{max\_time}.
 
 \begin{verbatim}
 WorkDefinition returns WorkDefinition:
-	'wd'
-		name=EString
-		'min' min_time=EInt
-		'max' max_time=EInt
+        'wd'
+                name=EString
+                'min' min_time=EInt
+                'max' max_time=EInt
+        ;
 \end{verbatim}
 
 et
 
 \begin{verbatim}
 Process returns Process:
-	{Process}
-	'process'
-		name=EString
-		'{'
-			'min_time' min_time=EInt
-			'max_time' max_time=EInt
-			(processElements+=ProcessElement (processElements+=ProcessElement)* )?
-		'}'
-	;
+        {Process}
+        'process'
+                name=EString
+                '{'
+                        'min_time' min_time=EInt
+                        'max_time' max_time=EInt
+                        (processElements+=ProcessElement (processElements+=ProcessElement)* )?
+                '}'
+        ;
 \end{verbatim}
 
 On peut à présent créer un fichier s'appuyant sur la grammaire créée et définir un modèle de processus, notamment celui de l'exemple de la partie précédente :
 
 \begin{verbatim}
 process exemple {
-	min_time 20
-	max_time 50
-	wd Conception min 10 max 16
-	wd RedactionDoc min 8 max 12
-	wd Development min 12 max 14
-	wd RedactionTest min 10 max 12
-	ws s2s from Conception to RedactionDoc
-	ws f2f from Conception to RedactionDoc
-	ws f2s from Conception to Development
-	ws s2s from Conception to RedactionTest
-	ws f2f from Development to RedactionTest
-	rd concepteur number 3
-	rd redacteur number 1
-	rd developpeur number 2
-	rd testeur number 2
-	rd machine number 4
-	ri type concepteur activity Conception instances 2
-	ri type machine activity Conception instances 2
-	ri type redacteur activity RedactionDoc instances 1
-	ri type machine activity RedactionDoc instances 1
-	ri type developpeur activity Development instances 2
-	ri type machine activity Development instances 3
-	ri type testeur activity RedactionTest instances 1
-	ri type machine activity RedactionTest instances 2
+        min_time 20
+        max_time 50
+        wd Conception min 10 max 16
+        wd RedactionDoc min 8 max 12
+        wd Development min 12 max 14
+        wd RedactionTest min 10 max 12
+        ws s2s from Conception to RedactionDoc
+        ws f2f from Conception to RedactionDoc
+        ws f2s from Conception to Development
+        ws s2s from Conception to RedactionTest
+        ws f2f from Development to RedactionTest
+        rd concepteur number 3
+        rd redacteur number 1
+        rd developpeur number 2
+        rd testeur number 2
+        rd machine number 4
+        ri type concepteur activity Conception instances 2
+        ri type machine activity Conception instances 2
+        ri type redacteur activity RedactionDoc instances 1
+        ri type machine activity RedactionDoc instances 1
+        ri type developpeur activity Development instances 2
+        ri type machine activity Development instances 3
+        ri type testeur activity RedactionTest instances 1
+        ri type machine activity RedactionTest instances 2
 }
 \end{verbatim}
 
@@ -319,87 +328,88 @@ A partir du modèle décrit textuellement, on peut l'exporter vers un format gé
 
 \section{T4 : Contraintes OCL sur le méta-modèle SimplePDL}
 
-On complète ici les contraintes OCL pour capturer les contraintes qui n’ont pu l’être par le métamodèle.
+On complète ici les contraintes OCL pour capturer les contraintes qui n’ont pu l’être par le méta-modèle.
 
 \subsection{Nom des ressources}
 
 Comme pour les activités, il s'agit de vérifier que les ressources ont un nom unique.
-On effectue donc un produit carthésien entre chaque Ressources.\\
+On effectue donc un produit carthésien entre chaque élément de type \textit{RessourceDefinition}.\\
 
 \begin{verbatim}
 -- Invariant vérifiant si toutes les ressources ont un nom unique
 inv resourcesNamesAreDifferent:
-	let elements : Set(ProcessElement) = self.processElements in
-    	let rds: Set(ProcessElement) = elements->select(e | e.oclIsTypeOf(RessourceDefinition)) in
-			rds->forAll(rd1, rd2: ProcessElement |
-				if rd1 <> rd2 then
-					rd1.oclAsType(RessourceDefinition).name <> rd2.oclAsType(RessourceDefinition).name
-				else
-					true
-				endif
-			)
+  let elements : Set(ProcessElement) = self.processElements in
+  let rds: Set(ProcessElement) = elements->select(e | e.oclIsTypeOf(RessourceDefinition)) in
+    rds->forAll(rd1, rd2: ProcessElement |
+      if rd1 <> rd2 then
+        rd1.oclAsType(RessourceDefinition).name <> rd2.oclAsType(RessourceDefinition).name
+      else
+        true
+      endif
+    )
 \end{verbatim}
 
 \subsection{Verification de la consistance}
 
-On peut compléter la requète OCL des TPs, pour s'assurer que toutes les WorkDefinition associées à une RessourceInstance et les activités pointées par une WorkInstance appartiennent bien au même Processus.
+On peut compléter la requète OCL des TPs, pour s'assurer que tous les éléments de type \textit{WorkDefinition} associés à une \textit{RessourceInstance} et les activités pointées par une \textit{WorkInstance} appartiennent bien au même \textit{Process}.
 
 \begin{verbatim}
 inv containmentConsistency:
   let elements : Set(ProcessElement) = self.processElements in
-    let wds: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(WorkDefinition)) in
-      let wss: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(WorkSequence)) in
-		let ris: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(RessourceInstance)) in
-        -- WS linked to a process WD are elements of this process
-        wds->forAll(wd: ProcessElement |
-            elements->includesAll(wd.oclAsType(WorkDefinition).linksToPredecessors)
-            and elements->includesAll(wd.oclAsType(WorkDefinition).linksToSuccessors)
-			and elements->includesAll(wd.oclAsType(WorkDefinition).linksToRessources))
-        -- source and target of a process WS are elements of this process
-        and wss->forAll(ws: ProcessElement |
-            elements->includes(ws.oclAsType(WorkSequence).predecessor)
-            and elements->includes(ws.oclAsType(WorkSequence).successor))
-		and ris->forAll(ws: ProcessElement |
-            elements->includes(ws.oclAsType(RessourceInstance).type)
-			and elements->includes(ws.oclAsType(RessourceInstance).activity))
+  let wds: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(WorkDefinition)) in
+  let wss: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(WorkSequence)) in
+  let ris: Set(ProcessElement) = elements->select( e | e.oclIsTypeOf(RessourceInstance)) in
+    -- WS linked to a process WD are elements of this process
+    wds->forAll(wd: ProcessElement |
+      elements->includesAll(wd.oclAsType(WorkDefinition).linksToPredecessors)
+      and elements->includesAll(wd.oclAsType(WorkDefinition).linksToSuccessors)
+      and elements->includesAll(wd.oclAsType(WorkDefinition).linksToRessources))
+    -- source and target of a process WS are elements of this process
+    and wss->forAll(ws: ProcessElement |
+       elements->includes(ws.oclAsType(WorkSequence).predecessor)
+       and elements->includes(ws.oclAsType(WorkSequence).successor))
+    -- activity and type of a process RI are elements of this process
+    and ris->forAll(ws: ProcessElement |
+       elements->includes(ws.oclAsType(RessourceInstance).type)
+       and elements->includes(ws.oclAsType(RessourceInstance).activity))
 \end{verbatim}
 
 \subsection{Consistance des ressources}
 
-On doit s'assurer qu'une WorkDefinition ne demande pas plus de ressources que le nombre maximal possible.
-Par exemple, si on dispose de 4 machines au total et que la WorkDefinition conception en demande 6, le modèle n'est pas correct.
+On doit s'assurer qu'un élément de type \textit{WorkDefinition} ne demande pas plus de ressources que le nombre maximal possible.
+Par exemple, si on dispose de 4 machines au total et que la \textit{WorkDefinition} conception en demande 6, le modèle n'est pas correct.
 
 \begin{verbatim}
 context RessourceInstance
 inv ressourceCheck:
-	if self.instances <= self.type.number then
-		true
-	else
-		false
-	endif
+        if self.instances <= self.type.number then
+                true
+        else
+                false
+        endif
 \end{verbatim}
 
 \subsection{Vérification temporelle}
 
-On doit s'assurer que la durée minimale d'une processus ou d'une WorkDefinition est bien inférieure à la durée maximale.
+On doit s'assurer que la durée minimale d'une \textit{Process} ou d'une \textit{WorkDefinition} est bien inférieure à la durée maximale.
 
 \begin{verbatim}
 context WorkDefinition
 inv timeCheck1:
-	self.max_time < self.min_time implies
-		false
+        self.max_time < self.min_time implies
+                false
 \end{verbatim}
 
 \section{T5 : Transformation SimplePDL vers PetriNet}
 
-Il faut à présent engendrer une nouvelle transformation SimplePdl to Petrinet. En effet, on doit reporter les changements réalisés dans méta-modèle SimplePdl, vers le méta-modèle PetriNet.\\
+Il faut à présent engendrer une nouvelle transformation SimplePdl vers Petrinet. En effet, on doit reporter les changements réalisés dans méta-modèle SimplePdl, vers le méta-modèle PetriNet.\\
 
 Nous allons de nouveau distinguer le cas des ressources de celui du temps.
 
 \subsection{Ressources}
 
-Pour les ressources, nous décidons de mettre en place le modèle suivant. Considérons deux types de ressources (RessourceDefinition), machine et testeur.
-En admettant que une WorkDefintion (Conception dans cette exemple) nécéssite deux machines et un testeur, on aura le modèle suivant en pétri :\\
+Pour les ressources, nous décidons de mettre en place le modèle suivant. Considérons deux types de ressources (\textit{RessourceDefinition}), machine et testeur.
+En admettant que une \textit{WorkDefintion} (Conception dans cette exemple) nécéssite deux machines et un testeur, on aura le modèle suivant en PetriNet :\\
 
 \begin{figure}[!h] 
 \begin{center}
@@ -409,48 +419,60 @@ En admettant que une WorkDefintion (Conception dans cette exemple) nécéssite d
 \end{center}
 \end{figure} 
 
-Basiquement on aura donc une règle permettant de parcourir les RessourceDefinition, qui seront traduites en places au sens des réseaux de pétri. L'attribut nombre de RessourceDefinition correspond directement au marquage de la place crée.
+Basiquement on aura donc une règle permettant de parcourir les éléments de type \textit{RessourceDefinition}, qui seront traduites en éléments de type \textit{Place} au sens des réseaux de Petri. L'attribut \textit{nombre} de \textit{RessourceDefinition} correspond directement au marquage initial de la place créée.
 
 \begin{verbatim}
 rule RessourceDefinition2PetriNet {
-	from rd: simplepdl!RessourceDefinition
-	to
-		p_ressource: petrinet!Place(
-						name <- rd.name,
-						marking <- rd.number,
-						net <- rd.getProcess())
+        from rd: simplepdl!RessourceDefinition
+        to
+                p_ressource: petrinet!Place(
+                        name <- rd.name,
+                        marking <- rd.number,
+                        net <- rd.getProcess())
 }
 \end{verbatim}
 
 Il nous faut ensuite une règle qui pour chaque WorkInstance va créer un arc entre la place de la ressource et la transition de début de la WorkDefinition associée.
-Il faut aussi crée un arc entre la transition de fin de la WorkDefinition et la place de la ressource. Cet arc traduit le fait que les ressources sont libérées à la fin de l'exécution de l'activité. Il est évident que l'on doit rendre autant de jetons que ceux qui ont été prélevés au démarrage de l'activité.
+Il faut aussi crée un élément de type \textit{Arc} entre la transition de fin de la \textit{WorkDefinition} et la place de la ressource. Cet arc traduit le fait que les ressources sont libérées à la fin de l'exécution de l'activité. Il est évident qu'à la libération, on doit rendre autant de jetons que ceux qui ont été prélevés au démarrage de l'activité.
 
 \begin{verbatim}
 rule RessourceInstance2PetriNet {
-	from ri: simplepdl!RessourceInstance
-	to
-		t_ressource_start: petrinet!Arc(
-						source <- thisModule.resolveTemp(ri.type, 'p_ressource'),
-						target <- thisModule.resolveTemp(ri.activity, 't_start'),
-						weight <- ri.instances,
-						kind <- #normal,
-						net <- ri.getProcess()),
-		t_ressource_finish: petrinet!Arc(
-						source <- thisModule.resolveTemp(ri.activity, 't_finish'),
-						target <- thisModule.resolveTemp(ri.type, 'p_ressource'),
-						weight <- ri.instances,
-						kind <- #normal,
-						net <- ri.getProcess())
+        from ri: simplepdl!RessourceInstance
+        to
+                t_ressource_start: petrinet!Arc(
+                        source <- thisModule.resolveTemp(ri.type, 'p_ressource'),
+                        target <- thisModule.resolveTemp(ri.activity, 't_start'),
+                        weight <- ri.instances,
+                        kind <- #normal,
+                        net <- ri.getProcess()),
+                t_ressource_finish: petrinet!Arc(
+                        source <- thisModule.resolveTemp(ri.activity, 't_finish'),
+                        target <- thisModule.resolveTemp(ri.type, 'p_ressource'),
+                        weight <- ri.instances,
+                        kind <- #normal,
+                        net <- ri.getProcess())
 }
 \end{verbatim}
 
 \subsection{Temps}
 
-Pour modéliser la gestion du temps dans un réseau de pétri, nous allons devoir mettre en place un observateur. Le principe de l'observateur est qu'il va nous fournir des informations sur le système sans pour autant en altérer le comportement. Typiquement, l'observateur d'une activité va nous informer sur le fait qu'elle se finit avec une durée correcte (comprise dans l'intervalle [temps\_min,temps\_max]), trop courte (durée exécution inférieure à la durée minimale) ou trop longue (durée exécution inférieure à la durée maximale).
+Pour modéliser la gestion du temps dans un réseau de Petri, nous allons devoir mettre en place un observateur. Le principe de l'observateur est qu'il va nous fournir des informations sur le système sans pour autant en altérer le comportement. Typiquement, l'observateur d'une activité va nous informer sur le fait qu'elle se finit avec une durée correcte (comprise dans l'intervalle [\textit{temps\_min},\textit{temps\_max]}), trop courte (durée exécution inférieure à la durée minimale) ou trop longue (durée exécution inférieure à la durée maximale).
 
-\ldots \ldots 
+Prenons l'activité \textit{Conception} à laquelle on adjoint un observateur :
 
 TODO : METTRE PHOTO OBSERVATEUR POUR UNE SEULE ACTIVITE ET EXPLIQUER
+
+Les observateurs sont donc présents au niveau de chaque activité puisqu'on veut surveiller pour chacune leur temps d'exécution, mais aussi pour le processus tout entier qui possède également des attributs \textit{time\_min} et \textit{time\_max}. Pour observer le processus tout entier, le principe est le même que pour une activité, car à l'instar d'une activité, il possède les places \textit{Ready}, \textit{Started} et \textit{Terminated} (équivalent de \textit{Finished} pour les activités), \\
+
+Dans notre exemple, on obtient le réseau de Petri suivant modélisant la gestion des ressources et l'observation des temps d'exécution :
+
+\begin{figure}[!h] 
+\begin{center}
+\includegraphics[width=18cm]{Capture-17.png}
+\caption{Modèle SimplePDL conforme à l'exemple du sujet} 
+\label{img1} 
+\end{center}
+\end{figure} 
 
 Le code à fournir pour mettre en place cet observateur est assez long. Il n'est donc pas cité, mais est présent dans les rendus de ce BE.
 
@@ -473,58 +495,25 @@ On peut donc valider cette transformation et attaquer la partie PetriNet2Tina.
 
 \section{T7 : Transformation PetriNet vers Tina}
 
-Le méta-modèle PetriNet n'ayant pas évolué, il n'y a pas non plus de raisons de faire évoluer la transformation PetriNet2Tina. 
-Nous avons juste du apporter quelques retouches par rapport à la version des TP. En effet, nous avions considéré que le temps associé par défaut à une transition est par défaut
-[0,0] sous tina. Pourtant, il s'agit d'un cas particulier puisque nous voulons que par défaut nos transitions soient de type [0,w[.\\
+Le méta-modèle PetriNet n'ayant pas évolué, il n'y a pas non plus de raisons de faire évoluer la transformation PetriNet vers Tina. 
+Nous avons juste du apporter quelques retouches par rapport à la version des TP. En effet, nous avions considéré que le temps associé par défaut à une transition est par défaut \textit{[0,0]} sous Tina. Pourtant, il s'agit d'un cas particulier puisque nous voulons que par défaut nos transitions soient de type \textit{[0,w[}.\\
 
-Dans cette transformation, on doit donc s'assurer que dans le modèle PetriNet si temps\_max = -1 (signifie w dans la syntaxe Tina car temps\_max forcément entier), alors le fichier de sortie comportera un intervalle terminé par w[.\\
+Dans cette transformation, on doit donc s'assurer que dans le modèle PetriNet si \textit{temps\_max = -1} (signifie \textit{w} dans la syntaxe Tina car \textit{temps\_max} forcément entier), alors le fichier de sortie comportera un intervalle terminé par \textit{w[}.\\
 
 \begin{verbatim}
--- build a Tina net file from a Petri net model
-query PetriNet2Tina = 
-	let repertoire: String = '/home/alex/workspace/BE/' in
-		petrinet!PetriNet.allInstances()
-			->collect(pn | pn.toTina().writeTo(repertoire + pn.name + '.net'));
-
--- concatenate all the strings of a sequence, adding the before char
--- before each string and the after char after.
-helper
-def: concatenateStrings(strings: Sequence(String),
-		before: String, after: String): String =
-	strings->iterate(s; acc: String = '' | acc + before + s + after);
-
--- translate a PetriNet element into the Tina textual syntax
-helper 
-context petrinet!PetriNet
-def: toTina(): String =
-	'net '  + self.name + '\n' + (
-		let nodesStrings: Sequence(String) = self.nodes->collect(p | p.toTina())
-		in
-			thisModule.concatenateStrings(nodesStrings, '', '\n')
-	)
-;
-
--- translate a place to Tina syntax
-helper
-context petrinet!Place
-def: toTina(): String =
-	'pl ' + self.name + '(' + self.marking.toString() + ')'
-;
-
 -- translate a transition to Tina syntax.
 helper
 context petrinet!Transition
 def: toTina(): String =
-	let inNodesNames: Sequence(String)
-		= self.incomings->collect(arc | arc.asTina(true))
-	in let outNodesNames: Sequence(String)
-		= self.outgoings->collect(arc | arc.asTina(false))
-	in
-		('tr '  + self.name
-		+ ' [' + self.min_time + ',' + self.max_time + ']'
-		+ thisModule.concatenateStrings(inNodesNames, ' ', '')
-		+ ' -> '
-		+ thisModule.concatenateStrings(outNodesNames, ' ', '')).regexReplaceAll('-1]', 'w[')
+  let inNodesNames: Sequence(String)
+    = self.incomings->collect(arc | arc.asTina(true)) in
+  let outNodesNames: Sequence(String)
+    = self.outgoings->collect(arc | arc.asTina(false) in
+  ('tr '  + self.name
+  + ' [' + self.min_time + ',' + self.max_time + ']'
+  + thisModule.concatenateStrings(inNodesNames, ' ', '')
+  + ' -> '
+  + thisModule.concatenateStrings(outNodesNames, ' ', '')).regexReplaceAll('-1]', 'w[')
 ;
 		
 -- Translate an Arc to Tina syntax. isSource indicates if it is an
@@ -532,18 +521,18 @@ def: toTina(): String =
 helper
 context petrinet!Arc
 def: asTina(isSource: Boolean): String =
-	if isSource = true then
-		self.source.name
-	else
-		self.target.name
-	endif
-	+
-	if self.kind = #normal then
-		'*'
-	else
-		'?'
-	endif
-	+ self.weight.toString()
+  if isSource = true then
+    self.source.name
+  else
+    self.target.name
+  endif
+  +
+  if self.kind = #normal then
+    '*'
+  else
+    '?'
+  endif
+  + self.weight.toString()
 ;
 \end{verbatim}
 
@@ -583,6 +572,8 @@ Il faut également vérifier que si elles sont toutes deux entiers positifs, la 
 \end{verbatim}
 
 \section{T9 : Propriétés LTL}
+
+Maintenant que nous avons effectué des vérification sur les modèles SimplePDL et PetriNet, il faut maintenant effectuer une vérification des propriétés de sûreté sur le modèle de réseau de Petri servant d'entrée à l'application Tina. Ces vérification peuvent s'effectuer via des requêtes LTL exécutées sur l'outil Selt.
 
 \subsection{Relation entre terminaison des activités et mort du réseau}
 
