rapport avec les captures tina

--- a/RAPPORT/partie2.tex
+++ b/RAPPORT/partie2.tex
@@ -141,9 +141,19 @@ On peut vérifier ces propriétés, avec une exécution en cinq phases sur une m
 \item \textit{Finihed}
 \end{itemize}
 
+\begin{figure}[!h] 
+\begin{center}
+\includegraphics[width=10cm]{Capture-19.png}
+\caption{Gestion fine des ressources sur l'activité Conception} 
+\label{img1} 
+\end{center}
+\end{figure} 
+
+\newpage
+
 \subsection{Contraintes LTL}
 
-Afin de montrer que cette extension n'altère en rien les contraintes exiggées dans le document de spécification, on peut exécuter la requête LTL permetant de vérifier que si le processus est en \textit{Started}, alors toutes ses activités sont soit en \textit{Ready}, soit en \textit{Started}, soit en \textit{Finished}.
+Afin de montrer que cette extension n'altère en rien les contraintes exiggées dans le document de spécification, on peut exécuter la requête LTL permetant de vérifier que si le processus est en \textit{Started}, alors toutes ses activités sont soit en \textit{Ready}, soit en \textit{Started}, soit en \textit{Finished}. Si l'on exécute les requêtes associées à cette propriété, présentées dans la partie 2.9.2., l'outil Selt renvoie True.
 
 \section{Ressources alternatives}
 
